// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderAgentFixPrompt > includes PR metadata, fixPrompt verbatim, P3 tagging, and severity-first order 1`] = `
"Verify each finding against current code. Fix only still-valid issues, skip the rest with a brief reason, keep changes minimal, and validate.

Repository: acme/widgets
Pull request: #42
Head SHA: abc123def456

Findings:

[P0] @src/a.ts lines 5-7
Guard the map with a mutex.

[P2] @src/b.ts lines 20-22
Adjust slice end index.

[P3 — no inline thread] Typo in heading
minor typo"
`;

exports[`renderInlineThreadBody > P0 with fixPrompt accordion 1`] = `
"[P0] Race on shared map

Concurrent writes without lock.

<details>
<summary>Prompt to fix</summary>

\`\`\`
Verify each finding against current code. Fix only still-valid issues, skip the rest with a brief reason, keep changes minimal, and validate.

[P0] @src/a.ts lines 5-7
Guard the map with a mutex or use Ref.modify.
\`\`\`

</details>"
`;

exports[`renderInlineThreadBody > P1 with fixPrompt accordion 1`] = `
"[P1] Missing await

Promise not awaited in handler.

<details>
<summary>Prompt to fix</summary>

\`\`\`
Verify each finding against current code. Fix only still-valid issues, skip the rest with a brief reason, keep changes minimal, and validate.

[P1] @src/b.ts line 1
Await the promise before returning.
\`\`\`

</details>"
`;

exports[`renderInlineThreadBody > P2 with fixPrompt accordion 1`] = `
"[P2] Off-by-one in slice

End index excludes last element incorrectly.

<details>
<summary>Prompt to fix</summary>

\`\`\`
Verify each finding against current code. Fix only still-valid issues, skip the rest with a brief reason, keep changes minimal, and validate.

[P2] @src/c.ts lines 20-22
Adjust slice end index to include the last item.
\`\`\`

</details>"
`;

exports[`renderReviewPointerBody > wraps agent fix prompt in accordion with pointer line 1`] = `
"See the structured review summary in the PR conversation.

<details>
<summary>Prompt for AI agents to fix all review findings</summary>

\`\`\`
Verify each finding against current code. Fix only still-valid issues, skip the rest with a brief reason, keep changes minimal, and validate.

Repository: acme/widgets
Pull request: #42
Head SHA: abc123def456

Findings:

[P1] @src/x.ts line 4
Fix src/x.ts line 4.
\`\`\`

</details>"
`;

exports[`renderReviewSummaryComment > (a) no findings 1`] = `
"## PR Agent Review

Adds a retry wrapper around the webhook dispatcher.

| | |
| --- | --- |
| Focus | No P0–P2 findings |
| Effort | 🔵🔵🔵⚪⚪ (3/5) |
| Relevant tests | partial |
| Security | No security concerns identified |"
`;

exports[`renderReviewSummaryComment > (b) P0 + P3 mix 1`] = `
"## PR Agent Review

Adds a retry wrapper around the webhook dispatcher.

| | |
| --- | --- |
| **P0** | [Null deref on empty payload](https://github.com/acme/widgets/blob/abc123def456/src/index.ts#L10-L12) |
| P3 | |
| | [Typo in heading](https://github.com/acme/widgets/blob/abc123def456/README.md#L1) |
| Effort | 🔵🔵🔵⚪⚪ (3/5) |
| Relevant tests | partial |
| Security | No security concerns identified |"
`;

exports[`renderReviewSummaryComment > (c) securityConcerns set 1`] = `
"## PR Agent Review

Adds a retry wrapper around the webhook dispatcher.

| | |
| --- | --- |
| Focus | No P0–P2 findings |
| Effort | 🔵🔵🔵⚪⚪ (3/5) |
| Relevant tests | partial |
| Security | Webhook secret compared without timing-safe equal. |"
`;
